--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     <!-- Header -->
     <header class="header">
         <div class="container header-wrapper">
-        <nav class="header-nav">
-            <a class="logo header-logo" href="./index.html">Web<span class="head-logospan">Studio</span></a>
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
-            </ul>
-        </nav>
-        <address class="address">
-            <ul class="address-list">
-                <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
-    </div>
+            <nav class="header-nav">
+                <a class="logo header-logo" href="./index.html">Web<span class="head-logospan">Studio</span></a>
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link current" href="./index.html">Studio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+                </ul>
+            </nav>
+            <address class="address">
+                <ul class="address-list">
+                    <li class="address-item"><a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                    <li class="address-item"><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
     </header>
     <main>
         <!-- section-business #1 -->
