--- a/index.html
+++ b/index.html
@@ -50,12 +50,22 @@
                 <h2 class="visually-hidden">Professionalism</h2>
                 <ul class="features-list">
                     <li class="features-item">
+                        <div class="features-icon">
+                            <svg class="icon-advantages" width="64" height="64">
+                                <use href="./images/icons.svg#antennaIcon"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle section-subtitle">Strategy</h3>
                         <p class="strategy-text section-text">
                             Our goal is to identify the business problem to walk away with the perfect and creative solution.
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-icon">
+                            <svg class="icon-advantages" width="64" height="64">
+                                <use href="./images/icons.svg#clockIcon"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle section-subtitle">Punctuality</h3>
                         <p class="strategy-text section-text">
                         Bring the key message to the brand's audience for the best price
@@ -63,6 +73,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-icon">
+                            <svg class="icon-advantages" width="64" height="64">
+                                <use href="./images/icons.svg#diagramIcon"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle section-subtitle">Diligence</h3>
                         <p class="strategy-text section-text">
                         Research and confirm brands with the strongest digital growth 
@@ -70,6 +85,11 @@
                         </p>
                     </li>
                     <li class="features-item">
+                        <div class="features-icon">
+                            <svg class="icon-advantages" width="64" height="64">
+                                <use href="./images/icons.svg#astronautIcon"></use>
+                            </svg>
+                        </div>
                         <h3 class="features-subtitle section-subtitle">Technologies</h3>
                         <p class="strategy-text section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                         </p>
