--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
                         <div class="team-member-info">
                             <h3 class="team-subtitle section-subtitle">Mark Guerrero</h3>
                             <p class="team-text section-text">Product Designer</p>
+                            <ul class="social-icons-list">
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#instagramIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#twitterIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#facebookIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedinIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -115,6 +145,36 @@
                         <div class="team-member-info">
                             <h3 class="team-subtitle section-subtitle">Tom Ford</h3>
                             <p class="team-text section-text">Frontend Developer</p>
+                            <ul class="social-icons-list">
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#instagramIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#twitterIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#facebookIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedinIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -122,6 +182,36 @@
                         <div class="team-member-info">
                             <h3 class="team-subtitle section-subtitle">Camila Garcia</h3>
                             <p class="team-text section-text">Marketing</p>
+                            <ul class="social-icons-list">
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#instagramIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#twitterIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#facebookIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedinIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="team-member">
@@ -129,6 +219,36 @@
                         <div class="team-member-info">
                             <h3 class="team-subtitle section-subtitle">Daniel Wilson</h3>
                             <p class="team-text section-text">UI Designer</p>
+                            <ul class="social-icons-list">
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#instagramIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#twitterIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#facebookIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-icons">
+                                    <a class="social-icons-link" href="abc">
+                                        <svg class="social-icon-round" width="16" height="16">
+                                            <use href="./images/icons.svg#linkedinIcon"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
