--- a/index.html
+++ b/index.html
@@ -262,42 +262,60 @@
                 <h2 class="portfolio-title section-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <img src="./images/Bankapp.jpg" alt="Banking App" width="360" height="300">
+                        <div class="portfolio-item-image">
+                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/Bankapp.jpg" alt="Banking App" width="360" height="300">
+                        </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
                             <p class="portfolio-text section-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
+                        <div class="portfolio-item-image">
+                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/Cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
+                        </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Cashless Payment</h3>
                             <p class="portfolio-text section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Meditationapp.jpg" alt="Meditation App">
+                        <div class="portfolio-item-image">
+                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/Meditationapp.jpg" alt="Meditation App">
+                        </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
                             <p class="portfolio-text section-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Taxiservice.jpg" alt="Taxi Service">
+                        <div class="portfolio-item-image">
+                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/Taxiservice.jpg" alt="Taxi Service">
+                        </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
                             <p class="portfolio-text section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Screenillustrations.jpg" alt="Screen Illustrations">
+                        <div class="portfolio-item-image">
+                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/Screenillustrations.jpg" alt="Screen Illustrations">
+                        </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Screen Illustrations</h3>
                             <p class="portfolio-text section-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <img src="./images/Onlinecourses.jpg" alt="Online Courses">
+                        <div class="portfolio-item-image">
+                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <img src="./images/Onlinecourses.jpg" alt="Online Courses">
+                        </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
                             <p class="portfolio-text section-text">Marketing</p>
