--- a/index.html
+++ b/index.html
@@ -259,63 +259,63 @@
 
         <section class="section-portfolio">
             <div class="container">
-                <h2 class="portfolio-title section-title">Our Portfolio</h2>
+                <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <img src="./images/Bankapp.jpg" alt="Banking App" width="360" height="300">
-                        </div>
+                        <img src="./images/Bankapp.jpg" alt="Banking App" width="360" height="300">
+                            <div class="portfolio-banner">
+                                <p class="portfolio-banner-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Banking App</h3>
                             <p class="portfolio-text section-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <img src="./images/Cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
-                        </div>
+                        <img src="./images/Cashlesspayment.jpg" alt="Cashless Payment" width="360" height="300">
+                            <div class="portfolio-banner">
+                                <p class="portfolio-banner-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Cashless Payment</h3>
                             <p class="portfolio-text section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <img src="./images/Meditationapp.jpg" alt="Meditation App">
-                        </div>
+                        <img src="./images/Meditationapp.jpg" alt="Meditation App">
+                            <div class="portfolio-banner">
+                                <p class="portfolio-banner-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Meditation App</h3>
                             <p class="portfolio-text section-text">App</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <img src="./images/Taxiservice.jpg" alt="Taxi Service">
-                        </div>
+                        <img src="./images/Taxiservice.jpg" alt="Taxi Service">
+                            <div class="portfolio-banner">
+                                <p class="portfolio-banner-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Taxi Service</h3>
                             <p class="portfolio-text section-text">Marketing</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <img src="./images/Screenillustrations.jpg" alt="Screen Illustrations">
-                        </div>
+                        <img src="./images/Screenillustrations.jpg" alt="Screen Illustrations">
+                            <div class="portfolio-banner">
+                                <p class="portfolio-banner-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Screen Illustrations</h3>
                             <p class="portfolio-text section-text">Design</p>
                         </div>
                     </li>
                     <li class="portfolio-item">
-                        <div class="portfolio-item-image">
-                            <p class="portfolio-item-image-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                            <img src="./images/Onlinecourses.jpg" alt="Online Courses">
-                        </div>
+                        <img src="./images/Onlinecourses.jpg" alt="Online Courses">
+                            <div class="portfolio-banner">
+                                <p class="portfolio-banner-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                         <div class="portfolio-item-info">
                             <h3 class="portfolio-subtitle section-subtitle">Online Courses</h3>
                             <p class="portfolio-text section-text">Marketing</p>
