--- a/index.html
+++ b/index.html
@@ -334,11 +334,46 @@
     <!-- footer -->
     <footer class="footer">
         <div class="container">
-            <a class="logo footer-logo" href="./index.html">Web<span class="head-logospan">Studio</span></a>
-            <p class="footer-text">
-                Increase the flow of customers and sales for your business with
-                digital marketing &amp; growth solutions.
-            </p>
+            <div class="footer-wrapper">
+                <a class="logo footer-logo" href="./index.html">Web<span class="head-logospan">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with
+                    digital marketing &amp; growth solutions.
+                </p>
+            </div>
+            <div class="footer-nav-wrapper">
+                <p class="footer-nav-text">Social media</p>
+                <ul class="footer-nav">
+                    <li class="footer-nav-item">
+                        <a class="footer-nav-link" href="#">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#instagramIcon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-nav-item">
+                        <a class="footer-nav-link" href="#">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#twitterIcon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-nav-item">
+                        <a class="footer-nav-link" href="#">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#facebookIcon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-nav-item">
+                        <a class="footer-nav-link" href="#">
+                            <svg class="footer-icon" width="24" height="24">
+                                <use href="./images/icons.svg#linkedinIcon"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
